--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -4,22 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
     <link href="styles.css" rel="stylesheet">
-    <script src="script" defer></script>
-
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-
     <div class="calculator-grid">
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
         <button data-all-clear class="span-two">AC</button>
-        <button data-delete>Del</button>
-        <button data-operation="">÷</button>
+        <button data-delete>DEL</button>
+        <button data-operation>÷</button>
         <button data-number>1</button>
         <button data-number>2</button>
         <button data-number>3</button>
